[package]
name = "solana-liquidity-pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_liquidity_pool"

[features]
default = ["devnet"]
devnet = []
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
solana-program = "1.17.7"
chainlink_solana = "1.0.0"

[programs.devnet]
solana_liquidity_pool = { features = ["devnet"] }

[programs.mainnet-beta]
solana_liquidity_pool = { features = ["mainnet"] }
